# BuildOS-KB

./: .env.example  .gitignore  00_VISION.md  01_PRODUCT_REQUIREMENTS.md  02_ARCHITECTURE.md  03_DATABASE_SCHEMA.md  04_BACKEND_SPEC.md  05_FRONTEND_SPEC.md  06_SEARCH_ENGINE.md  07_MCP_SERVER.md  08_AI_SERVICES.md  09_SYNC_ENGINE.md  10_GRAPH_ENGINE.md  11_DEPLOYMENT.md  12_SECURITY.md  13_ROADMAP.md  AGENTS.md  BUILD_LOG.md  CLAUDE.md  CODEX.md  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_users.py  0003_add_tsv_trigger.py
backend/app/: auth.py  config.py  database.py  main.py  mcp_server.py  redis_client.py
backend/app/api/: admin.py  auth.py  deps.py  projects.py  search.py
backend/app/models/: __init__.py  document.py  index_run.py  project.py  relationship.py  technology.py  user.py
backend/app/schemas/: document.py  project.py  search.py  user.py
backend/app/services/: discovery.py  embedding.py  extraction.py  okf.py  search.py
backend/app/workers/: scheduler.py  tasks.py
frontend/: .npmrc  Dockerfile  firebase-config.example.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthGuard.tsx  ModelSelector.tsx  NavBar.tsx  SyncAuthModal.tsx  SyncStatusPanel.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  firebase.ts  providers.tsx
(+5 files in other folders)
